--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
 		"core-js": "^3.8.3",
 		"eslint": "^7.19.0",
 		"eslint-plugin-import": "^2.22.1",
+		"husky": "^4.3.8",
 		"jest": "^26.6.3",
+		"lint-staged": "^10.5.3",
+		"prettier": "^2.2.1",
 		"typescript": "^4.1.3"
 	},
 	"engines": {
